--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,14 @@ nav {
     padding: 0px !important;
     
 }
+
+h5 {
+    font-size: 50px !important;
+    display: flex;
+    justify-content: center;
+}
+p {
+    font-size: 20px !important;
+    display: flex;
+    justify-content: center;
+}
