added socials sections along with images and links to the socials

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,12 @@ img{
     width: 60%;
     margin-left: 20%;
 }
+
+.social-logo{
+    width: 30% !important;
+    
+}
+
+.hovering:hover {
+    width: 120% !important;
+}
