--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,47 @@ footer {
 .img-fluid {
     object-fit: cover !important;
 }
+
+
+
+
+
+
+
+
+/* Form Contact */
+form {
+box-sizing: border-box;
+
+/* Auto layout */
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 24px;
+gap: 24px;
+
+
+position: relative;
+width: 320px;
+min-width: 320px;
+height: 480px;
+
+background: #FFFFFF;
+border: 1px solid #D9D9D9;
+border-radius: 8px;
+}
+
+.form-group {
+    margin-left: 35%;
+}
+
+.form-control{
+    width: 500px;
+  height: 40px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.dropdown-toggle{
+ margin-left: 500px;
+}
