--- a/css/styles.css
+++ b/css/styles.css
@@ -49,16 +49,6 @@ img{
     margin-left: 20%;
 }
 
-.social-logo{
-    width: 15% !important;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    
-}
-
-.hovering:hover {
-    width: 110% !important;
-}
 
 footer {
     margin-top: 3%;
@@ -97,6 +87,13 @@ border: 1px solid #D9D9D9;
 border-radius: 8px;
 }
 
+.social-logo {
+    height: 100px;
+    width: 40% !important;
+    margin-top: 10px;
+    margin-bottom: 50px; 
+}
+
 .hovering {
     transition: transform 0.3s ease;
 }
@@ -105,14 +102,17 @@ border-radius: 8px;
     transform: scale(1.1);
 }
 
-.social-logo {
-    height: 100px;
-}
-
 .navbar {
     margin-bottom: 20px;
 }
+
 .navbarcolor {
     background-color: #343a40; 
     padding-bottom: 20px; 
+}
+
+@media (max-width: 768px) {
+    .social-logo {
+        width: 80% !important; 
+    }
 }
